# ko2ka

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.toml  pyproject.toml  test_matcher.py
dev/scripts/: debug_series_match.py  reset_kavita_progress.py
src/ko2ka/: checkpoint.py  config.py  kavita.py  komga.py  main.py  matcher.py
