[project]
name = "ko2ka"
version = "0.1.0"
description = "CLI to migrate reading progress from Komga to Kavita"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "toml>=0.10.2",
    "typer>=0.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ko2ka = "ko2ka.main:main"
